# openblox

./: .gitignore  .gitlab-ci.yml  .gitmodules  HACKING  Makefile  Makefile.am  Makefile.in  OpenBloxClient.pro  OpenBloxClient.pro.in  README  README.md  configure  configure.ac  genrc.sh  internalrc.qrc  openblox-client.doap  openblox.1  openblox.spec  prepare_ci.sh  test.txt
openblox/: Makefile.am
rc/: .README
res/: init.lua
src/: Makefile.am  openblox.cpp
src/SDL2Plugin/: OgreGLContext.cpp  OgreGLDefaultHardwareBufferManager.cpp  OgreGLDefaultHardwareBufferManager.h  OgreGLDepthBuffer.h  OgreGLEngineDll.cpp  OgreGLFBOMultiRenderTarget.cpp  OgreGLFBORenderTexture.cpp  OgreGLFrameBufferObject.cpp  OgreGLGpuProgram.cpp  OgreGLGpuProgram.h  OgreGLGpuProgramManager.cpp  OgreGLGpuProgramManager.h  OgreGLHardwareBufferManager.cpp  OgreGLHardwareBufferManager.h  OgreGLHardwareIndexBuffer.cpp  OgreGLHardwareIndexBuffer.h  OgreGLHardwareOcclusionQuery.cpp  OgreGLHardwareOcclusionQuery.h  OgreGLHardwarePixelBuffer.cpp  OgreGLHardwarePixelBuffer.h  OgreGLHardwareVertexBuffer.cpp  OgreGLHardwareVertexBuffer.h  OgreGLPBRenderTexture.cpp  OgreGLPBRenderTexture.h  OgreGLPixelFormat.cpp  OgreGLPixelFormat.h  OgreGLPlugin.cpp  OgreGLPlugin.h  OgreGLPrerequisites.h  OgreGLRenderSystem.cpp  OgreGLRenderSystem.h  OgreGLRenderTexture.cpp  OgreGLRenderTexture.h  OgreGLRenderToVertexBuffer.cpp  OgreGLRenderToVertexBuffer.h  OgreGLStateCacheManager.cpp  OgreGLStateCacheManager.h  OgreGLSupport.cpp  OgreGLSupport.h  OgreGLTexture.cpp  (+7 more)
src/SDL2Plugin/GLSL/include/: OgreGLSLExtSupport.h  OgreGLSLGpuProgram.h  OgreGLSLLinkProgram.h  OgreGLSLLinkProgramManager.h  OgreGLSLProgram.h  OgreGLSLProgramFactory.h
src/SDL2Plugin/GLSL/src/: OgreGLSLExtSupport.cpp  OgreGLSLGpuProgram.cpp  OgreGLSLLinkProgram.cpp  OgreGLSLLinkProgramManager.cpp  OgreGLSLPreprocessor.cpp  OgreGLSLProgram.cpp  OgreGLSLProgramFactory.cpp
src/SDL2Plugin/SDL/: OgreGLUtil.h  OgreSDLGLSupport.cpp  OgreSDLWindow.cpp
src/SDL2Plugin/StateCacheManager/: OgreGLNullStateCacheManagerImp.cpp  OgreGLNullStateCacheManagerImp.h  OgreGLNullUniformCacheImp.cpp  OgreGLNullUniformCacheImp.h  OgreGLStateCacheManagerImp.cpp  OgreGLStateCacheManagerImp.h  OgreGLUniformCacheImp.cpp  OgreGLUniformCacheImp.h
src/SDL2Plugin/atifs/include/: ATI_FS_GLGpuProgram.h  ps_1_4.h
src/SDL2Plugin/atifs/src/: ATI_FS_GLGpuProgram.cpp  Compiler2Pass.cpp  ps_1_4.cpp
src/openblox/: Main.cpp
test/: luac.out  testColor3.lua  testinstance.lua  wait.lua
